force-app/main/default/objects/BudgetAllocation/BudgetAllocation.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>