force-app/main/default/objects/BudgetAllocation/fields/Budget_Allocation_Number__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocation_Number__c</fullName>
    <description>Autonumber to identify Budget Allocation Record</description>
    <displayFormat>BA-{000000}</displayFormat>
    <label>Budget Allocation Number</label>
    <type>AutoNumber</type>
</CustomField>