force-app/main/default/objects/BudgetAllocation/fields/Budget_Allocation_Reference__c.field-meta.xml
<CustomField>
    <fullName>Budget_Allocation_Reference__c</fullName>
    <formula>Funding_Award__r.FundingOpportunity.Funding_Scheme_Acronym__c + &quot;-&quot; + Budget_Allocation_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Allocation Reference</label>
    <type>Text</type>
</CustomField>