force-app/main/default/objects/BudgetAllocation/fields/Funding_Award__c.field-meta.xml
<CustomField>
    <fullName>Funding_Award__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to a Funding Award</description>
    <label>Funding Award</label>
    <referenceTo>FundingAward</referenceTo>
    <relationshipLabel>Budget Allocations</relationshipLabel>
    <relationshipName>Budget_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>