force-app/main/default/objects/BudgetAllocation/recordTypes/Award.recordType-meta.xml
<RecordType>
    <fullName>Award</fullName>
    <active>true</active>
    <description>Denotes the amount of budget allocated to an Award</description>
    <label>Award</label>
</RecordType>