force-app/main/default/objects/BudgetAllocation/recordTypes/Disbursement.recordType-meta.xml
<RecordType>
    <fullName>Disbursement</fullName>
    <active>true</active>
    <description>Denotes the amount of budget allocated to a Disbursement</description>
    <label>Disbursement</label>
</RecordType>